# robot_stuff

./: .gitignore  Makefile  README.md  app.vue  nuxt.config.ts  package-lock.json  package.json
apps/server/: index.ts  package.json  rooms.ts
apps/web/: next.config.ts  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/room/[id]/: page.tsx
apps/web/components/: AppHeader.tsx  Board.tsx  Chat.tsx  HowToPlay.tsx  Overlays.tsx  Roster.tsx  Settings.tsx  ThemeSwitcher.tsx
apps/web/lib/: config.ts  identity.ts  theme.ts  useRoom.ts
components/: VBoard.vue
deploy/: remote-deploy.sh
server/robot-server/: Cargo.toml  README.md
server/robot-server/src/: game.rs  games.rs  main.rs
shared/: game.test.ts  game.ts  package.json  protocol.ts
utils/: types.ts
