[package]
name = "robot-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

axum = { version = "0.7.4", features = ["ws"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
futures = { version = "0.3.19" }
nanoid = "0.4.0"
rand = "0.8.4"
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1.12.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.5.1", features = ["full"] }
tracing = { version = "0.1.27" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
